Fix radio alignment
Summary:
Radio button wrapper span.checkbox's had `width: auto` because
they were set to `display: inline;`. Changing this to
`display: inline-block;` lets us use the width property so
we can properly align the text.

This also changes the margin-left back to -20px, so that it matches
the width and the text lines up.

Test Plan:
visit
http://localhost:9000/test.html#content=%7B%22question%22%3A%7B%22content%22%3A%22%5B%5B%E2%98%83%20radio%201%5D%5D%22%2C%22widgets%22%3A%7B%22radio%201%22%3A%7B%22type%22%3A%22radio%22%2C%22graded%22%3Atrue%2C%22options%22%3A%7B%22choices%22%3A%5B%7B%22content%22%3A%22%7C%7C%20fdakjldfsaj%20!%5B%5D()%20fda%20kljdfsa%20lfj%20dfsalkj%20a%20dfsaklj%20fdlkdfj%20lfdaskjfda%20ldfskj%20%7C%7C%20%7C%7C%20%7C%7C%20%7C%7C%20%7C%7C%20http%3A%2F%2Fphabricator.khanacademy.org%2FD6898fdaslkfdsj%20alkfaj%20fdaslkfdsaj%20lfdj%20fdlakj%20fadslkfda%20jalfk%20jfadlkdfa%20%22%2C%22correct%22%3Atrue%7D%2C%7B%22correct%22%3Afalse%7D%5D%2C%22randomize%22%3Afalse%2C%22multipleSelect%22%3Afalse%7D%7D%7D%7D%2C%22answerArea%22%3A%7B%22type%22%3A%22multiple%22%2C%22options%22%3A%7B%22content%22%3A%22%22%2C%22widgets%22%3A%7B%7D%7D%2C%22calculator%22%3Afalse%7D%2C%22hints%22%3A%5B%7B%22content%22%3A%22Here's%20one%20way%20to%20make%20an%20angle%20with%20these%20points%2C%20but%20this%20angle%20is%20acute%2C%20not%20obtuse!%20%20%5Cn!%5B%5D(https%3A%2F%2Fka-perseus-images.s3.amazonaws.com%2F93fd1b71b55ca18f4a81ad0520df8c96e07125f4.png)%22%2C%22widgets%22%3A%7B%7D%7D%2C%7B%22content%22%3A%22Here%20is%20the%20way%20to%20make%20an%20obtuse%20angle%20in%20this%20situation.%20It's%20an%20obtuse%20angle%20because%20its%20measure%20is%20greater%20than%20%2490%24%20degrees.%20%20%5Cn!%5B%5D(https%3A%2F%2Fka-perseus-images.s3.amazonaws.com%2F303cfd47cb758adc31af8f80d440827199c6bc63.png)%22%2C%22widgets%22%3A%7B%7D%7D%5D%7D
does the checkbox text line up?

Reviewers: brianmerlob

Reviewed By: brianmerlob

Subscribers: alpert

Differential Revision: http:

--- a/stylesheets/exercise-content-package/perseus.less
+++ b/stylesheets/exercise-content-package/perseus.less
@@ -199,6 +199,7 @@
 #answer_area .perseus-widget-radio {
     li span.checkbox input[type=radio] {
         float: none;
+        margin: 3px;
     }
 }
 
@@ -225,8 +226,9 @@
 
         span.checkbox {
             .interactive-component;
+            display: inline-block;
             width: 20px;
-            margin-left: -21px;
+            margin-left: -20px;
             margin-right: 0px;
         }
 
